--- a/src/hope/apps/administration/templates/admin/base.html
+++ b/src/hope/apps/administration/templates/admin/base.html
@@ -13,6 +13,10 @@
         color = '#673AB7';
       } else if (url.includes('dev')) {
         color = '#00796B';
+      } else if (url.includes('eph')) {
+          color = '#CC00EF'
+      } else if (url.includes('tst')) {
+          color = '#EF00A7'
       } else {
         color = '#00ADEF';
       }
